# django-dump-die

./: .coveragerc  .cspell.txt  .editorconfig  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  coveragetests.sh  cspell.json  generate_docs.sh  manage.py  pyproject.toml  runpytests.py  runtests.py  setup.cfg  setup.py
core/: middleware.py  urls.py  views.py
core/static/core/css/: dd.css
core/static/core/js/: dd.js
core/templates/dump_die/: _dd_object.html  dd.html
core/templatetags/: dump_die.py
django_dump_die/: apps.py  asgi.py  constants.py  middleware.py  settings.py  test_urls.py  urls.py  utils.py  views.py  wsgi.py
django_dump_die/static/django_dump_die/css/: _toolbar_properties.css  dd.css
django_dump_die/static/django_dump_die/js/: dd.js
django_dump_die/templates/django_dump_die/: _attributes.html  _custom_color_theme.html  _dd_object.html  _functions.html  dd.html  index.html  sample.html  test_index.html  util_toolbar.html
django_dump_die/templates/django_dump_die/head_partials/: _css_partial.html  _js_partial.html
django_dump_die/templates/django_dump_die/output_types/: complex_type.html  simple_type.html  skipped_object.html
django_dump_die/templates/django_dump_die/partials/: _attributes.html  _custom_color_theme.html  _dump.html  _dump_objects.html  _functions.html
django_dump_die/templatetags/: dump_die.py
django_dump_die/views/: __init__.py  dd_view.py  example_helpers.py  example_views.py  test_views.py
docs/: requirements.in  requirements.txt
docs/source/: api_reference.rst  built_in_examples.rst  conf.py  configuration.rst  django_dump_die.rst  django_dump_die.templatetags.rst  django_dump_die.views.rst  index.rst  quickstart.rst  usage.rst
docs/source/api_reference/: django_dump_die.rst  modules.rst
dump_die/: apps.py  asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
dump_die/static/dump_die/css/: dd.css
dump_die/static/dump_die/js/: dd.js
dump_die/templates/dump_die/: _attributes.html  _custom_color_theme.html  _dd_object.html  _functions.html  dd.html
dump_die/templatetags/: dump_die.py
tests/: settings.py  test_views.py  urls.py  views.py
tests/test_views/: test_complex_type.py  test_function_type.py  test_intermediate_type.py  test_request_response_cycle_type.py  test_simple_type.py
