[build-system]
requires = ['setuptools>=40.8.0', 'wheel']
build-backend = 'setuptools.build_meta:__legacy__'

[project]
name = "django-dump-die"
version = "0.1.7"
description = "A Django app to add Laravel/Symfony-like dump and die functionality."
readme = "README.md"
authors = [
    { name = "David Barnes", email = "barnesdavidj@gmail.com" },
    { name = "Brandon Rodriguez", email = "brodriguez8774@gmail.com" },
]
maintainers = [
    { name = "David Barnes", email = "barnesdavidj@gmail.com" },
    { name = "Brandon Rodriguez", email = "brodriguez8774@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = [
    "debug",
    "dd",
    "die",
    "django",
    "dump",
    "inspect",
    "tool",
]
dependencies = [
    "django >= 3.2.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "pylint",
    "pylint-django",
]
doc = [
    "doc8",
    "esbonio",
    "pip-tools",
    "rstcheck",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/djbarnes/django-dump-die"
